// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sagas/todos add should add todo when todo is valid 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": "todo1",
          "type": "@@krf/ADD_TODOS",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "type": "@@krf/RESET_NEWTODO",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos add should not add todo when todo is blank 1`] = `
Array [
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos add should not add todo when todo is empty 1`] = `
Array [
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos add should not add todo when todo is null 1`] = `
Array [
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos add should not add todo when todo is undefined 1`] = `
Array [
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos clearCompleted should clear completed todo 1`] = `
Array [
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": Array [
      Object {
        "id": "todo1",
        "todo": "todo1",
      },
      Object {
        "id": "todo2",
        "todo": "todo2",
      },
    ],
  },
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "CALL": Object {
          "args": Array [
            Array [
              "todo1",
              "todo2",
            ],
          ],
          "context": null,
          "fn": [Function],
        },
      },
    },
    "value": false,
  },
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos complete should complete todo 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": "todo1",
          "type": "@@krf/ADD_COMPLETED",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos completeAll should complete many todos 1`] = `
Array [
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": Array [
      Object {
        "id": "todo1",
        "todo": "todo1",
      },
      Object {
        "id": "todo2",
        "todo": "todo2",
      },
    ],
  },
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "CALL": Object {
          "args": Array [
            Object {
              "completed": true,
              "id": "todo1",
              "todo": "todo1",
            },
          ],
          "context": null,
          "fn": [Function],
        },
      },
    },
    "value": "todo1",
  },
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "CALL": Object {
          "args": Array [
            Object {
              "completed": true,
              "id": "todo2",
              "todo": "todo2",
            },
          ],
          "context": null,
          "fn": [Function],
        },
      },
    },
    "value": "todo2",
  },
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos completeAll should complete many todos 2`] = `
Array [
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": Array [
      Object {
        "id": "todo1",
        "todo": "todo1",
      },
      Object {
        "id": "todo2",
        "todo": "todo2",
      },
    ],
  },
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "CALL": Object {
          "args": Array [
            Object {
              "completed": false,
              "id": "todo1",
              "todo": "todo1",
            },
          ],
          "context": null,
          "fn": [Function],
        },
      },
    },
    "value": "todo1",
  },
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "CALL": Object {
          "args": Array [
            Object {
              "completed": false,
              "id": "todo2",
              "todo": "todo2",
            },
          ],
          "context": null,
          "fn": [Function],
        },
      },
    },
    "value": "todo2",
  },
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos completeAll should complete one todos 1`] = `
Array [
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": Array [
      Object {
        "id": "todo1",
        "todo": "todoOnEdit",
      },
    ],
  },
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "CALL": Object {
          "args": Array [
            Object {
              "completed": true,
              "id": "todo1",
              "todo": "todoOnEdit",
            },
          ],
          "context": null,
          "fn": [Function],
        },
      },
    },
    "value": true,
  },
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos completeAll should complete one todos 2`] = `
Array [
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": Array [
      Object {
        "id": "todo1",
        "todo": "todoOnEdit",
      },
    ],
  },
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "CALL": Object {
          "args": Array [
            Object {
              "completed": false,
              "id": "todo1",
              "todo": "todoOnEdit",
            },
          ],
          "context": null,
          "fn": [Function],
        },
      },
    },
    "value": true,
  },
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos remove should remove todo 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": "todo1",
          "type": "@@krf/REMOVE_TODOS",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": "todo1",
          "type": "@@krf/REMOVE_EDITING",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": "todo1",
          "type": "@@krf/REMOVE_COMPLETED",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos update should not update todo when todo does not exist 1`] = `
Array [
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": undefined,
  },
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos update should remove todo when the todo is blank 1`] = `
Array [
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": Object {
      "id": "todo1",
      "todo": "  ",
    },
  },
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "CALL": Object {
          "args": Array [
            "todo1",
          ],
          "context": null,
          "fn": [Function],
        },
      },
    },
    "value": false,
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": "todo1",
          "type": "@@krf/REMOVE_EDITING",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos update should remove todo when the todo is empty 1`] = `
Array [
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": Object {
      "id": "todo1",
      "todo": "",
    },
  },
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "CALL": Object {
          "args": Array [
            "todo1",
          ],
          "context": null,
          "fn": [Function],
        },
      },
    },
    "value": false,
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": "todo1",
          "type": "@@krf/REMOVE_EDITING",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`sagas/todos update should update todo 1`] = `
Array [
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": Object {
      "id": "todo1",
      "todo": "todoOnEdit",
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "id": "todo1",
            "todo": "todoOnEdit",
          },
          "type": "@@krf/UPDATE_TODOS",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": "todo1",
          "type": "@@krf/REMOVE_EDITING",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": undefined,
  },
]
`;
